--- a/backend/layout/plate.ejs
+++ b/backend/layout/plate.ejs
@@ -15,8 +15,8 @@
     <title>Tourist</title>
   </head>
   <header><%-include("../include/header.ejs")%></header>
-  <%-include("../include/side.ejs")%> <%-include("../include/flash.ejs")%>
-  <%-body%>
+  <%-include("../include/side.ejs")%> <%-include("../include/flash.ejs")%> <%-
+  body %>
   <footer><%-include("../include/footer.ejs")%></footer>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <script src="/app.js"></script>
