--- a/backend/include/footer.ejs
+++ b/backend/include/footer.ejs
@@ -3,11 +3,11 @@
     <div class="row text-center text-md-start">
       <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
         <h5 class="text-uppercase mb-4 font-weight-bold text-warning">
-          PROJECT-X
+          Nepali Tube🔞
         </h5>
         <p style="font-weight: bolder">
           Watch, upload and share videos with the world. Powered by modern tech
-          and built for creators.
+          and built for nepali users
         </p>
       </div>
 
@@ -17,10 +17,10 @@
         </h5>
         <p><a href="/" class="text-light text-decoration-none">Home</a></p>
         <p>
-          <a href="/upload" class="text-light text-decoration-none">Upload</a>
+          <a href="/newvideo" class="text-light text-decoration-none">Upload</a>
         </p>
         <p>
-          <a href="/explore" class="text-light text-decoration-none">Explore</a>
+          <a href="/" class="text-light text-decoration-none">Explore</a>
         </p>
         <p>
           <a href="/contact" class="text-light text-decoration-none">Contact</a>
@@ -50,8 +50,7 @@
         <h5 class="text-uppercase mb-4 font-weight-bold text-warning">
           Contact
         </h5>
-        <p><i class="fas fa-envelope me-2"></i> contact@yoursite.com</p>
-        <p><i class="fas fa-phone me-2"></i> +977 9800000000</p>
+        <p><i class="fas fa-envelope me-2"></i> nepalitube@hotmai.com</p>
         <p><i class="fas fa-map-marker-alt me-2"></i> Kathmandu, Nepal</p>
       </div>
     </div>
@@ -73,14 +72,12 @@
     transition: 0.3s;
   }
   .footer {
+    height: 0.2rem;
+    border-top: 0.1px solid gray;
+    /* background-color: red; */
     border-radius: 0.2rem;
-    backdrop-filter: blur(6px);
-    -webkit-backdrop-filter: blur(6px);
-    background: rgba(255, 255, 255, 0.1);
-    box-shadow: -4px 0 13px rgba(0, 0, 0, 0.3);
     color: beige;
     width: 100%;
-    margin-top: 110vh;
     left: 50%;
     position: absolute;
     transform: translate(-50%, -50%);
