--- a/backend/include/header.ejs
+++ b/backend/include/header.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tourist</title>
+    <title>Nepali Tube</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -398,12 +398,13 @@
         .vs-search-btn {
           font-size: 1.4rem;
           margin-left: 0.5em;
-          top: 0.7em;
+          top: 0.6em;
           color: red;
-
-          width: 43px;
+          height: 43px;
+          border-radius: 50%;
+          width: 40px;
           background-color: black;
-          height: 30px;
+          height: 40px;
           border-radius: 50%;
         }
 
@@ -435,7 +436,7 @@
         <div class="vs-container">
           <div class="vs-left">
             <a class="" href="/" style="font-weight: bolder; cursor: pointer"
-              >Tourist</a
+              >Nepali Tube</a
             >
           </div>
           <div class="vs-search-container">
@@ -448,7 +449,7 @@
                 placeholder="Search Videos..."
               />
               <div id="resultsfrinput" style="display: none"></div>
-              <button type="submit" class="vs-search-btn btn-search-input">
+              <button type="submit" class="vs-search-btn btn-search-input"> 
                 <i class="fas fa-search"></i>
               </button>
             </form>
