maintained like views check.ejs

--- a/backend/layout/plate.ejs
+++ b/backend/layout/plate.ejs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/style.css" />
     <title>Tourist</title>
   </head>
+
   <header><%-include("../include/header.ejs")%></header>
   <%-include("../include/side.ejs")%> <%-include("../include/flash.ejs")%> <%-
   body %>
@@ -21,3 +22,4 @@
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <script src="/app.js"></script>
 </html>
+<script></script>
